...
                    
                    TextField("", text: $username)
                        .font(.headline)
                        .frame(width: 200)
                        .padding()
                        .textFieldStyle(RoundedBorderTextFieldStyle())
                        .accessibilityIdentifier("UsernameTextField")
                    
                    Button(action: {
                        isLoading = true
                        debugPrint("Login Button Tapped!")
                        auth.login(username: username) { success in
                                             
                        }
                    })
                    {
                        Text("Login")
                            .frame(width: 150, height: 50)
                            .background(Color.blue)
                            .foregroundColor(.white)
                            .cornerRadius(10)
                    }
                    
...
