...

struct PersistenceController {
    
    //static let shared = PersistenceController(inMemory: true)
    static let shared: PersistenceController = {
            // Use an environment variable to determine if the store should be in-memory
            guard let useInMemoryStore = Bool(ProcessInfo.processInfo.environment["USE_IN_MEMORY_STORE"] ?? "false") else {
                return PersistenceController(inMemory: false)
            }
            
            return PersistenceController(inMemory: useInMemoryStore)
        }()

...
